# dankerino

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  appveyor.yml  badges.json  chatterino.pro
.circleci/: config.yml
.github/workflows/: build.yml
cmake/: FindChaiScript.cmake
lib/: chaiscript.pri
plugins/supibot_completion/: CMakeLists.txt  README.md  supibot_completion.h  supibot_completion.pro
src/: Application.cpp  Application.hpp  CMakeLists.txt
src/common/: Channel.cpp  CompletionModel.cpp  CompletionModel.hpp  Env.cpp  QLogging.cpp  QLogging.hpp
src/controllers/commands/: CommandController.cpp  command_calc.cpp  command_calc.hpp  command_mega.cpp  command_mega.hpp
src/messages/: Message.hpp  MessageElement.hpp
src/plugin_interfaces/: API.cpp  API.hpp  Completer.hpp  MessageCreator.hpp  Plugin.cpp  Plugin.hpp  SettingsPlugin.hpp
src/providers/: IvrApi.cpp  IvrApi.hpp
src/providers/chatterino/: ChatterinoBadges.cpp
src/providers/custom_badges/: CustomBadges.cpp  CustomBadges.hpp
src/providers/seventv/: SeventvEmotes.cpp
src/providers/twitch/: IrcMessageHandler.cpp  TwitchChannel.cpp  TwitchChannel.hpp  TwitchEmotes.hpp  TwitchIrcServer.cpp  TwitchIrcServer.hpp  TwitchMessageBuilder.cpp  TwitchMessageBuilder.hpp
src/singletons/: Paths.cpp  Paths.hpp  Plugins.cpp  Plugins.hpp  Settings.hpp  WindowManager.cpp
src/util/: StreamerMode.cpp
src/widgets/: Window.cpp
src/widgets/dialogs/: EmotePopup.cpp  LogsPopup.cpp  LogsPopup.hpp  SettingsDialog.cpp  StreamSettingsDialog.cpp  UserInfoPopup.cpp  UserInfoPopup.hpp
(+9 files in other folders)
